Replaced new Integer() with Integer.valueOf()
git-svn-id: https://svn.apache.org/repos/asf/directory/apacheds/trunk@951488 13f79535-47bb-0310-9956-ffa450edef68